<resources>
    <string name="app_name">Scrubs Up</string>
    <string name="top_bar">Choose</string>
    <string name="card">Memory Cards</string>
    <string name="show_answer">Click the card to see the answer</string>
    <string name="show_question">Click the answer to see the question again</string>
    <string name="heart">Heart</string>
    <string name="brain">Brain</string>
    <string name="lungs">Lungs</string>
    <string name="previous_button">previous button</string>
    <string name="model_3d">3D Models</string>
    <string name="model_3d_one">3D model</string>
    <string name="Arterial_vessel">Arterial vessel</string>
    <string name="Neuron">Neuron</string>
    <string name="full_body">Full body</string>
    <string name="skeleton">Skeleton</string>
    <string name="eye">Eye</string>
    <string name="details">Details</string>
    <string name="quiz">Quiz</string>
    <string name="word_count">%d/5</string>
    <string name="skip">Skip</string>
    <string name="score">Score: %d</string>
    <string name="question_count">Question %d out of 5</string>
    <string name="ortho">Ortho</string>
    <string name="cardiology">Cardiology</string>
    <string name="neurology">Neurology</string>
    <string name="trauma">Trauma</string>
    <string name="upperlimb">Upper Limb</string>
    <string name="lowerlimb">Lower Limb</string>
    <string name="respiratory">Respiratory System</string>
    <string name="wholeskeleton">Whole Skeleton</string>
    <string name="next">Next</string>
...
